connected json file

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       <h4>Everyone says leaving Lorem Ipsum is bad practice</h4>
       <h3>ACTORLIST</h3>
     </header>
+    <script src="script.js"></script>
   </body>
 </html>
