fixed html, script is working

--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
   </head>
   <body>
     <header>
-      <h4>Everyone says leaving Lorem Ipsum is bad practice</h4>
-      <h3>ACTORLIST</h3>
+      <h2>ACTOR LIST</h3>
     </header>
+
+    <main>
+      <section >
+        <template class="actorFeed">
+          <div class ="actorContainer">
+            <h4>name </h4>
+            <h5>film</h5>
+          </div>
+          
+        </template>
+      </section>
+    </main>
+
     <script src="script.js"></script>
   </body>
 </html>
