its buggy but the idea is there.....

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
     </header>
 
     <main>
-      <section >
+      <section>
         <template class="actorFeed">
           <div class ="actorContainer">
-            <h4>name </h4>
-            <h5>film</h5>
+            <h4>.</h4>
+            <h5 class="hidden">.</h5>
           </div>
+      
           
         </template>
       </section>
     </main>
-
     <script src="script.js"></script>
+
+  
   </body>
 </html>
